Initialize clean beads database for demo sessions
- Fresh beads initialization with empty database (0 issues)
- Ready for agent demo sessions without leftover data
- Includes proper gitattributes and gitignore configuration

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,6 @@
 # Use bd merge for beads JSONL files
 
 # Use bd merge for beads JSONL files
+
+# Use bd merge for beads JSONL files
 .beads/issues.jsonl merge=beads
